# FootprintPipeline

./: INSTALL  Makefile.am  Makefile.in  MixtureModel.r.in  README  README.md  RebuildSignal.pl.in  aclocal.m4  configure  configure.ac  find_footprints.sh.in.in  generate_cut_matrix.sh.in.in  get_cut_matrix.R.in  guix.scm  make_1bp_bam_for_fp.sh.in  make_coord_seq_files.sh.in  run_footprinting.R.in.in  test.sh.in
